--- a/scss/_contacto.scss
+++ b/scss/_contacto.scss
@@ -8,9 +8,9 @@
   display: grid;
   grid-template-columns: 50% 50%;
   grid-template-rows: 15rem 15rem 5rem;
-  gap: 8rem;
-  margin-left: 10rem;
-  margin-right: 10rem;
+  gap: 7rem;
+  margin-left: 6rem;
+  margin-right: 6rem;
   justify-content: center;
   align-content: center;
   background-position: center;
@@ -26,7 +26,7 @@
     background-repeat: no-repeat;
     border: solid #272e29; }
 
-.grid__container__contacto .grid__uno__texto {
+.grid__container__contacto .grid__uno__texto .grid__texto{
       grid-row: 1/2;
       grid-column: 2/3;
       background-position: inherit;
@@ -52,7 +52,7 @@
           background-repeat: no-repeat;
           border: solid #272e29; }   
 
-.grid__container__contacto .grid__dos__texto {
+.grid__container__contacto .grid__dos__texto .grid__texto{
           grid-row: 3/4;
           grid-column: 1/2;
          background-position: inherit;
@@ -61,7 +61,7 @@
           border: solid #272e29; }
   
   
-.grid__container__contacto .grid__tres__texto {
+.grid__container__contacto .grid__tres__texto .grid__texto{
       grid-row: 3/4;
       grid-column: 2/3;
       background-position: inherit;
@@ -69,48 +69,24 @@
       background-repeat: no-repeat;
       border: solid #272e29; }
 
+
+.grid__texto{
+ font-size: 1rem;
+
+}
+
+
+
 .contactoTexto {
   display: flex;
   font-size: 2rem;
-  padding-left:1rem;
+  margin-left:5rem;
+  margin-right: 5rem;
   text-align: center;
-  padding-left: 6rem; }
-
-.grid__container__contacto1 {
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
-    grid-template-rows: 25rem;
-    gap: 1rem;
-    margin-left: 25rem;
-    margin-right: 10rem;
-    justify-content: center;
-    align-content: center;
-    background-position: center;
-    padding: 2rem; }
-.grid__container__contacto1 .grid__uno__uno {
-      grid-row: 1/2;
-      grid-column: 1/2;
-      background-position: inherit;
-      background-size: cover;
-      background-repeat: no-repeat;
-       }
-.grid__container__contacto1 .grid__dos .imput {
-        grid-row: 1/2;
-        grid-column: 2/3;
-        background-position: inherit;
-        background-size: cover;
-        background-repeat: no-repeat;
-         }
-.grid__container__contacto1 .grid__uno__uno {
-          grid-row: 1/2;
-          grid-column: 2/3;
-          background-position: inherit;
-          background-size: cover;
-          background-repeat: no-repeat;
-           }       
+   }
   
 .imput {
-  background-color:rgb(73, 73, 73);
+  background-color:rgb(29, 41, 37);
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
@@ -119,9 +95,13 @@
   width: 30rem;
   height: 20rem;
   text-align: center;
-  margin-left: 10rem;
-  margin-top: 0.25rem; }
+  margin-left: 30rem;
+  margin-right: 10rem;
+  margin-top: 2rem;
+  margin-bottom: 2rem; }
+
   .imput .contacto__imput {
+    font-size: 1.5rem;
     padding: 0.50rem;
     color: white; }
 
@@ -130,18 +110,20 @@
 @media (min-width: 541px) and (max-width: 720px) {
   .contactoTituloh2{
     text-align: center;
-    padding-top: 2rem;
+    padding-top: 1rem;
     padding-bottom: 0.5rem;
    }
   
   .grid__container__contacto {
         grid-template-columns: 50% 50%;
-    grid-template-rows: 15rem 15rem 5rem;
+    grid-template-rows: 15rem 15rem 2rem;
     gap: 1rem;
     margin-left: 1.5rem;
     margin-right: 1.5rem;
     margin-top: 0.5rem;
-    padding: 2rem; }
+    padding: 2rem; 
+ 
+  }
   
   .grid__container__contacto .grid__uno {
       grid-row: 1/2;
@@ -152,7 +134,8 @@
       
         }
   
-  .grid__container__contacto .grid__uno__texto {
+  .grid__container__contacto .grid__uno__texto .grid__texto {
+        font-size:1rem ;
         grid-row: 1/2;
         grid-column: 2/3;
         border: solid #272e29; }
@@ -174,105 +157,83 @@
             background-image: url("../recursos/contacto/contacto__5.jpg");
             border: solid #272e29; }         
 
-   .grid__container__contacto .grid__dos__texto {
+   .grid__container__contacto .grid__dos__texto .grid__texto {
+            font-size: 1rem;
             grid-row: 3/4;
             grid-column: 1/2;
            border: solid #272e29; }
          
    
   
-    .grid__container__contacto .grid__tres__texto {
+    .grid__container__contacto .grid__item.grid__tres__texto .grid__texto{
+        font-size: 1rem;
         grid-row: 3/4;
         grid-column: 2/3;
         border: solid #272e29; }
+
   
-      
-   
-  .grid__texto{
-    font-size: 1.5rem;
-  }
   
-  .contactoTexto {
+       
+    .contactoTexto {
     display: flex;
-    font-size: 2rem;
-    padding-left:0.5em;
+    font-size: 1.25rem;
+    margin-left:3rem;
     text-align: center;
       }
     
-  .grid__container__contacto1 {
-      display: grid;
-      grid-template-columns: 1fr 1fr 1fr;
-      grid-template-rows: 25rem;
-      gap: 1rem;
-      margin-left: 6rem;
-      margin-right: 8rem;
-      justify-content: center;
-      align-content: center;
-      background-position: center;
-      padding: 2rem; }
-  .grid__container__contacto1 .grid__uno__uno {
-        grid-row: 1/2;
-        grid-column: 1/2;
-        background-position: inherit;
-        background-size: cover;
-        background-repeat: no-repeat;
-         }
-  .grid__container__contacto1 .grid__dos .imput {
-          grid-row: 1/2;
-          grid-column: 2/3;
-          background-position: inherit;
-          background-size: cover;
-          background-repeat: no-repeat;
-           }
-  .grid__container__contacto1 .grid__uno__uno {
-            grid-row: 1/2;
-            grid-column: 2/3;
-            background-position: inherit;
-            background-size: cover;
-            background-repeat: no-repeat;
-             }       
+  
     
   
   
-  .imput {
-    background-color:rgb(73, 73, 73);
-    display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
-    font-size: 2rem;
-    padding: 1rem;
-    width: 30rem;
-    height: 20rem;
-    text-align: center;
-    margin-left: 10rem;
-    margin-top: 0.25rem; }
-    .imput .contacto__imput {
-      padding: 0.50rem;
-      color: white; }
-
+      .imput {
+        background-color:rgb(29, 41, 37);
+        display: flex;
+        flex-direction: row;
+        flex-wrap: wrap;
+        font-size: 2rem;
+        padding: 1rem;
+        width: 23rem;
+        height: 17rem;
+        text-align: center;
+        margin-left: 6.5rem;
+        margin-right: 4rem;
+        margin-top: 2rem;
+        margin-bottom: 2rem; }
+      
+        .imput .contacto__imput {
+          font-size: 1rem;
+          padding: 0.50rem;
+          color: white; }
   }
 
 @media (min-width: 320px) and (max-width: 540px) {
   
   .contactoTituloh2{
+    font-size: 1.5rem;
     text-align: center;
-    padding-top: 2rem;
-    padding-bottom: 0.5rem;
+    margin-left: 2rem;
+    padding-top: 1rem;
+    
    }
   
   .grid__container__contacto {
-        grid-template-columns: 100%;
-    grid-template-rows: 20rem 10rem 20rem 5rem 20rem 5rem;
-    gap: 0.5rem;
-    margin-left: 2.5rem;
-    margin-top: 0.5rem;
-    padding: 0.5rem; }
+    grid-template-columns: 100%;
+    grid-template-rows: 20rem 5rem 20rem 20rem 2rem 2rem;
+    gap: 1rem;
+    margin-left: 1rem;
+    margin-right: 1rem;
+    width: 25rem;
+    height:76rem;
+    background-color: black;
+         }
   
   .grid__container__contacto .grid__uno {
+      align-content: center;
       grid-row: 1/2;
       grid-column: 1/1;
+      padding-left: 1rem;
       width: 20rem;
-      height:20rem ;
+      height:20rem;
       background-image: url("../recursos/contacto/contacto__1.jpg");
       
         }
@@ -280,6 +241,7 @@
    .grid__container__contacto .grid__uno__texto {
         grid-row: 2/3;
         grid-column:1/1;
+        width: 20rem;
         border: solid #272e29; }
 
   
@@ -291,75 +253,60 @@
           background-image: url("../recursos/contacto/contacto__2.jpg");
           border: solid #272e29; }
 
-  .grid__container__contacto .grid__dos__texto {
-            grid-row: 4/5;
-            grid-column: 1/1;
-           border: solid #272e29; }
-  
   .grid__container__contacto .grid__tres {
-            grid-row: 5/6;
+            grid-row: 4/5;
             grid-column: 1/1;
             width: 20rem;
             height:20rem ;
             background-image: url("../recursos/contacto/contacto__5.jpg");
             border: solid #272e29; }         
 
+
   .grid__container__contacto .grid__dos__texto {
+            grid-row: 5/6;
+            grid-column: 1/1;
+            width: 20rem;
+           border: solid #272e29; }
+  
+  
+
+  .grid__container__contacto .grid__tres__texto  {
             grid-row: 6/7; 
             grid-column: 1/1;
+            width: 20rem;
+            font-size: 0.5rem;
            border: solid #272e29; }
   
       
-  .grid__texto{
-    font-size: 1.5rem;
-  }
+ 
   
   .contactoTexto {
-    display: flex;
-    font-size: 1.5rem;
-    padding-left:0.5em;
-    text-align: center;
+     font-size: 1.1rem;
+     text-align: center;
+     margin-left: 1rem;
+     margin-right: 1rem;
+    
       }
     
-  .grid__container__contacto1 {
-      display: grid;
-      grid-template-columns: 100%;
-      grid-template-rows: 25rem;
-      margin-left: 0.1rem;
-      margin-right: 0.1rem;
-      padding: 1rem; 
-      padding-bottom: 1rem;
-    }
-
-  .grid__container__contacto1 .grid__uno__uno {
-        grid-row: 1/2;
-        grid-column: 1/1
-                 }
-  .grid__container__contacto1 .grid__dos .imput {
-          grid-row: 2/3;
-          grid-column: 1/1
-                    }
-  .grid__container__contacto1 .grid__uno__uno {
-            grid-row: 3/4;
-            grid-column: 1/1;
-                         }       
-  
-  .imput {
-    background-color:#304438;
-    display: flex;
-    flex-direction:row ;
-    flex-wrap: wrap;
-    font-size: 1.5rem;
-    text-align: center;
-    height: 20rem;
-    margin-left: 0.1rem;
-    margin-right: 0.1rem;
-    padding-bottom: 1rem;
-      }
-    .imput .contacto__imput {
-      padding: 0.50rem;
-      color: white; 
-      width: 10rem;
-      }
+   
+      .imput {
+        background-color:rgb(29, 41, 37);
+        display: flex;
+        flex-direction: row;
+        flex-wrap: wrap;
+        font-size: 2rem;
+        padding: 1rem;
+        width: 23rem;
+        height: 18rem;
+        text-align: center;
+        margin-left: 2rem;
+        margin-right: 1rem;
+        margin-top: 2rem;
+        margin-bottom: 2rem; }
+      
+        .imput .contacto__imput {
+          font-size: 1rem;
+          padding: 0.50rem;
+          color: white; }
  }
 
