--- a/scss/_actitud.scss
+++ b/scss/_actitud.scss
@@ -22,30 +22,32 @@
   margin-left: 5rem;
   margin-right: 5rem; }
 
-.grid__container__actitud1 .grid__uno {
+.container-fluid1  .grid__item .grid__uno {
     grid-row: 1/2;
     grid-column: 1/2;
     background-position: inherit;
     background-size: cover;
     background-repeat: no-repeat; }
   
-.grid__container__actitud1 .grid__uno {
-  
-    grid-row: 1/1;
+.container-fluid1  .grid__item .grid__dos {
+    grid-row: 1/2;
     grid-column: 2/3;
     background-position: inherit;
     background-size: cover;
     background-repeat: no-repeat; }
+
 
 .container__actitud2{
     margin-left: 4rem;
     margin-right: 4rem;
     padding-bottom: 2rem;
     }
+
 .actitudTituloh3{
    color:white ;
    margin-left: 25rem;
 }
+
 .actitud__texto{
   font-size: 1.50rem;
  }
@@ -73,10 +75,44 @@
 .grid__container__actitud3 .grid__dos {
       grid-row: 1/2;
       grid-column: 2/3;
-     }  
+     } 
+     
+     .linkContactoActitud {
+      padding-bottom: 2rem;
+      margin-left: 20rem;
+        }  
+    
+    .btn__actitud{
+      background-color:white;
+      width: $ancho/2;
+      height:$alto/2 ;
+      color:black;
+      font-size: 2rem;
+      padding: 0.75rem;
+      border-radius:10rem;
+      margin-left:40rem;
+      margin-right: 15rem ;
+      margin-bottom: 3rem;
+        &:hover {  
+        transform: scale(1.20);
+        background-color:rgb(29, 41, 37);
+        padding:1rem ;
+         }
+      } 
+                
+    .btn__actitud__texto{
+      color:black;
+      &:hover{
+      color:wheat
+       }
+      }    
+
+
+
  
 
 @media (min-width: 541px) and (max-width: 720px) {
+  
   .actitudTituloh2{
     margin-left: 2rem;
     padding-top: 2rem;
@@ -86,31 +122,46 @@
   .container-fluid1{
   width: 33rem;
   height: 10rem;
-  }
-  
-  
+    }
+
   .container__actitud1 {
     display: grid;
     grid-template-columns: 100%;
-    grid-template-rows: 25rem 25rem;
-    gap: 0.5rem;
+    grid-template-rows: 20rem 20rem;
+    gap: 2rem;
+    justify-content: center;
+    align-content: center;
+    background-position: center;
+    padding-bottom: 0.10rem;
     margin-left: 2rem;
-    margin-right: 2rem; }
+    margin-right: 1rem; }
   
-  .grid__container__actitud1 .grid__uno {
+  .container-fluid1  .grid__item .grid__uno {
       grid-row: 1/2;
       grid-column: 1/1;
-       }
+      background-position: inherit;
+      background-size: cover;
+      background-repeat: no-repeat; }
     
-  .grid__container__actitud1 .grid__uno {
+  .container-fluid1 .grid__item .grid__dos {
+    
       grid-row: 2/3;
       grid-column: 1/1;
-      }
+      background-position: inherit;
+      background-size: cover;
+      background-repeat: no-repeat; }
+
+  .container__texto{
+    font-size: 1.25rem;
+   } 
+ 
+      
   
   .container__actitud2{
       margin-left: 2rem;
       margin-right: 2rem;
       padding-bottom: 2rem;
+      gap:1rem;
       }
 
 
@@ -118,83 +169,193 @@
      color:white ;
      margin-left: 5rem;
   }
+
   .actitud__texto{
-    font-size: 1.50rem;
+    font-size: 1.25rem;
    }
+
   .container__actitud3{
+    background-color: black;
     display: grid;
     grid-template-columns: 100%;
-    grid-template-rows: 25rem;
+    grid-template-rows: 25rem 20rem;
     gap: 1rem;
     padding-top: 2rem;
-    padding-bottom: 0.10rem;
-    margin-left: 2rem;
-    margin-right: 2rem; }
+    margin-left: 1rem;
+    margin-right: 1rem; }
+
+    .grid__container__actitud3 .grid__item.grid__dos {
+      margin-right: 1rem;
+      grid-row: 2/3;
+      grid-column: 1/1;
+    }  
   
- 
+ .grid__item .grid__dos .imagen{
+  width: 80%;
+  height: 5rem;
+  margin-right: 1rem;
+
+ }
     
-  .grid__container__actitud3 .grid__item .grid__dos {
-    
-      grid-row: 1/2;
+  .grid__container__actitud3 .grid__item .grid__uno {
+     grid-row: 1/2;
       grid-column: 1/1;
        }
- .grid__container__actitud3 .grid__item.grid__uno {
-        grid-row: 2/3;
-        grid-column: 1/1;
-      }
+  
 
+  .linkContactoActitud {
+    font-size: 1.5rem;
+    text-align: center;
+        padding-bottom: 2rem;
+        margin-left: 3rem;
+          }  
+      
+  .btn__actitud{
+        background-color:white;
+        width: $ancho/2;
+        height:$alto/2 ;
+        color:black;
+        font-size: 2rem;
+        padding: 0.75rem;
+        border-radius:10rem;
+        margin-left:15rem;
+        margin-right: 15rem ;
+        margin-bottom: 3rem;
+          &:hover {  
+          transform: scale(1.20);
+          background-color:rgb(29, 41, 37);
+          padding:1rem ;
+           }
+        } 
+                  
+      .btn__actitud__texto{
+        color:black;
+        &:hover{
+        color:wheat
+         }
+        }    
+  
   
   }
 @media (min-width: 320px) and (max-width: 540px) {
   
   .actitudTituloh2{
-    font-size: 1.4rem;
-    margin-left: 1rem;
+    font-size: 1.5rem;
+    margin-left: 1.5rem;
     padding-top: 2rem;
     padding-bottom: 2rem;
   }
   
   .container-fluid1{
   width: 23rem;
-  height: 10rem;
-  
-  }
-    
+  height: 20rem;
+    }
+
   .container__actitud1 {
     display: grid;
     grid-template-columns: 100%;
-    grid-template-rows: 25rem 25rem;
-    gap: 0.5rem;
-    margin-left: 2rem;
-    margin-right: 2rem; }
+    grid-template-rows: 14rem 14rem;
+    gap: 1rem;
+    justify-content: center;
+    align-content: center;
+    background-position: center;
+    padding-bottom: 0.10rem;
+    margin-left: 1rem;
+    margin-right: 1rem; }
   
-  .grid__container__actitud1 .grid__uno {
+  .container-fluid1  .grid__item .grid__uno {
       grid-row: 1/2;
       grid-column: 1/1;
        }
     
-  .grid__container__actitud1 .grid__uno {
+  .container-fluid1 .grid__item .grid__dos {
+    
       grid-row: 2/3;
       grid-column: 1/1;
-      }
+       }
+
+  .container__texto{
+    font-size: 1rem;
+   } 
+ 
+      
   
+  .container__actitud2{
+      margin-left: 1rem;
+      margin-right: 2rem;
+      padding-bottom: 2rem;
+      gap:1rem;
+      }
+
+
   .actitudTituloh3{
+     font-size: 1.20rem;
      color:white ;
-     margin-left: 2rem;
+     margin-left: 1rem;
   }
+
   .actitud__texto{
-    font-size: 1.50rem;
+    font-size: 1rem;
    }
+
   .container__actitud3{
     display: grid;
     grid-template-columns: 100%;
-    grid-template-rows: 25rem;
+    grid-template-rows: 25rem 25rem;
     gap: 1rem;
     padding-top: 2rem;
     padding-bottom: 0.10rem;
-    margin-left: 2rem;
-    margin-right: 2rem; }
-      
+    margin-left: 1rem;
+    margin-right: 1rem; }
   
-  } 
+ .grid__item .grid__dos .imagen{
+  width: 10rem;
+  height: 5rem;
 
+ }
+    
+  .grid__container__actitud3 .grid__item .grid__uno {
+    
+      grid-row: 1/2;
+      grid-column: 1/1;
+       }
+  .grid__container__actitud3 .grid__item.grid__dos {
+    
+        grid-row: 2/3;
+        grid-column: 1/1;
+      }
+ 
+      .linkContactoActitud {
+    font-size: 1.5rem;
+    text-align: center;
+        padding-bottom: 2rem;
+        margin-left: 1rem;
+          }  
+      
+  .btn__actitud{
+        background-color:white;
+        width: $ancho/2;
+        height:$alto/2 ;
+        color:black;
+        font-size: 2rem;
+        padding: 0.75rem;
+        border-radius:10rem;
+        margin-left:8rem;
+        margin-right: 15rem ;
+        margin-bottom: 3rem;
+          &:hover {  
+          transform: scale(1.20);
+          background-color:rgb(29, 41, 37);
+          padding:1rem ;
+           }
+        } 
+                  
+      .btn__actitud__texto{
+        color:black;
+        &:hover{
+        color:wheat
+         }
+        }    
+  
+  
+  }
