--- a/scss/_footer.scss
+++ b/scss/_footer.scss
@@ -1,51 +1,58 @@
 footer {
-    display: flex;
-    flex-direction: column;
-    flex-wrap: wrap;
-    align-items: center;
-    justify-content: space-evenly;      
-    padding-top: 1rem;
-    
-        
-  }
-  
-  .redes-footer {
+  display: flex;
+  flex-direction: column;
+  flex-wrap: wrap;
+  align-items: center;
+  justify-content: space-evenly;      
+  padding-top: 1rem;
+  &__redes {
     display: flex;
     flex-direction: row;
+     a {
+      margin: 1rem;
+      }
+     }
+  }
+
+.header__logo {
+  width: 15vw;
+  height: 10vh; 
+  } 
+     
+.instagram{
+  width: 2.75rem;
+  height: 2rem;
+   }     
+
+
+.facebook{
+  width: 2.75rem;
+  height: 2rem ;
+  }
+  
+.navegador {
+  display: flex;
+  flex-wrap: nowrap;
+  justify-content:center;
+  margin-top: 0.5rem;
    }
   
-  .redes-footer a {
-    margin: 1rem;
-  }
-  
-  .facebook{
-    width: 3.5rem;
-    height: 2rem ;
-  }
-  .instagram{
-    width: 2.5rem;
-    height: 2rem;
-  
-  }
-  
-  .navegador-footer {
-    background-color:rgb(48, 68, 56) ;
-    display: flex;
-    flex-wrap: nowrap;
-    justify-content:center;
-    margin-top: 1rem;  
-  }
-  
-  .navegador-footer span a {
-    color:white;
-    font-size: 1rem;
-    border-left: 0.10rem solid white;
-    padding-left: 1rem;
-    padding-right: 1rem;
-    transition: all 0.5s ease;  
-  }
-  
-  .navegador-footer span a:hover {
-    padding: 0.5rem;
-  }
-  
+.navegador span a {
+  color:white;
+  font-size: 1rem;
+  border-left: 0.10rem solid white;
+  padding-left: 1rem;
+  padding-right: 1rem;
+    }
+
+span a:hover {
+  padding: 0.5rem;
+   }
+
+@media (min-width: 541px) and (max-width: 720px) {   
+      
+   }
+
+@media (min-width: 320px) and (max-width: 540px) {   
+      
+  }  
