--- a/scss/_nosotros.scss
+++ b/scss/_nosotros.scss
@@ -3,183 +3,206 @@
   color: white;
   padding: 2rem;
   }
+
 .nosotrosTituloh3{
-    text-align: center;  
-    color: white;
-    padding: 1rem;
-    }
+  text-align: center;  
+  color: white;
+  padding: 1rem;
+  }
+
 .nosotrosTituloh4{
-     color: white;
-      } 
+  color: white;
+  } 
 
 .grid__container__nosotros1{
-    display:grid;
-    grid-template-columns:50% 50%;
-    grid-template-rows: 25rem 25rem 10rem;
-    gap: 2rem;
-    justify-content: center;
-    align-content: center;
-    background-position: center;
-    padding-top: 3rem;
-    padding-bottom: 0.10rem;
-    margin-left: 5rem;
-    margin-right: 5rem;
-      }
+  display:grid;
+  grid-template-columns:50% 50%;
+  grid-template-rows: 25rem 25rem 10rem;
+  gap: 2rem;
+  justify-content: center;
+  align-content: center;
+  background-position: center;
+  padding-top: 3rem;
+  padding-bottom: 0.10rem;
+  margin-left: 5rem;
+  margin-right: 5rem;
+  }
 
 .text-container {
-        width: 100%;
-        background: #00000099;
-        text-align: center;
-        }
+  width: 100%;
+  background: #00000099;
+  text-align: center;
+  }
+
 .grid__texto{
-        font-size: 2rem;
-        color: white;
-        }
+  font-size: 2rem;
+  color: white;
+  }
+
 .grid__texto1{
-         font-size:1.5rem ;
-         }   
+  font-size:1.5rem ;
+  }   
    
 .grid__container__nosotros1  .grid__uno{
-      grid-row: 1/2;
-      grid-column: 1/2;
-      background-image: url("../recursos/Nosotros 1.jpg");
-      background-position: inherit;
-      background-size: cover;
-      background-repeat: no-repeat;
-      } 
+  grid-row: 1/2;
+  grid-column: 1/2;
+  background-image: url("../recursos/Nosotros 1.jpg");
+  background-position: inherit;
+  background-size: cover;
+  background-repeat: no-repeat;
+  } 
   
 .grid__container__nosotros1  .grid__dos{
-      grid-row: 1/2;
-      grid-column: 2/3;
-      background-image: url("../recursos/Nosotros 2.jpg");
-      background-position: inherit;
-      background-size: cover;
-      background-repeat: no-repeat;
-      }
+  grid-row: 1/2;
+  grid-column: 2/3;
+  background-image: url("../recursos/Nosotros 2.jpg");
+  background-position: inherit;
+  background-size: cover;
+  background-repeat: no-repeat;
+  }
         
 .grid__container__nosotros1 .grid__tres{
-      grid-row: 2/3;
-      grid-column: 1/2;
-      background-image: url("../recursos/Nosotros 3.jpg");
-      background-position: inherit;
-      background-size: cover;
-      background-repeat: no-repeat;
-      }
+  grid-row: 2/3;
+  grid-column: 1/2;
+  background-image: url("../recursos/Nosotros 3.jpg");
+  background-position: inherit;
+  background-size: cover;
+  background-repeat: no-repeat;
+  }
         
 .grid__container__nosotros1  .grid__cuatro{
-      grid-row: 2/3;
-      grid-column: 2/3;
-      background-image: url("../recursos/Nosotros 4.jpg");
-      background-position: inherit;
-      background-size: cover;
-      background-repeat: no-repeat;
-      }
+  grid-row: 2/3;
+  grid-column: 2/3;
+  background-image: url("../recursos/Nosotros 4.jpg");
+  background-position: inherit;
+  background-size: cover;
+  background-repeat: no-repeat;
+  }
         
 .grid__container__nosotros1 .grid__cinco{
-      grid-row: 3/4;
-      grid-column: 1/3;
-      display:flex;
-      flex-direction:column;
-      justify-content:stretch;
-      align-content: stretch;
-      }
+  grid-row: 3/4;
+  grid-column: 1/3;
+  display:flex;
+  flex-direction:column;
+  justify-content:stretch;
+  align-content: stretch;
+  }
 
    
 
 .grid__container__nosotros2{
-        display:grid;
-        grid-template-columns:50% 50%;
-        grid-template-rows: 20rem 20rem 10rem;
-        gap: 2rem;
-        justify-content: center;
-        align-content: center;
-        background-position: center;
-        padding-bottom: 0.10rem;
-        margin-left: 5rem;
-        margin-right: 5rem;
-          }
+  display:grid;
+  grid-template-columns:50% 50%;
+  grid-template-rows: 20rem 20rem 10rem;
+  gap: 4rem;
+  justify-content: center;
+  align-content: center;
+  background-position: center;
+  padding-bottom: 0.10rem;
+  margin-left: 5rem;
+  margin-right: 5rem;
+  }
+
 .grid__container__nosotros2.grid__uno{
-            grid-row: 1/2;
-            grid-column: 1/2;
-            background-position: inherit;
-            background-size: cover;
-            background-repeat: no-repeat;
-            } 
+  grid-row: 1/2;
+  grid-column: 1/2;
+  background-position: inherit;
+  background-size: cover;
+  background-repeat: no-repeat;
+  } 
+
 .grid__container__nosotros2  .grid__dos{
-              grid-row: 1/2;
-              grid-column: 2/3;
-              background-image: url("../recursos/nosotros_5.png");
-              background-position: inherit;
-              background-size: cover;
-              background-repeat: no-repeat;
-              }
+  grid-row: 1/2;
+  grid-column: 2/3;
+  background-image: url("../recursos/nosotros_5.jpg");
+  background-position: inherit;
+  background-size: cover;
+  background-repeat: no-repeat;
+  }
+
 .grid__container__nosotros2 .grid__tres{
-                grid-row: 2/3;
-                grid-column: 1/2;
-                background-image: url("../recursos/nosotros_6.png");
-                background-position: inherit;
-                background-size: cover;
-                background-repeat: no-repeat;
+  grid-row: 2/3;
+  grid-column: 1/2;
+  background-image: url("../recursos/nosotros_6.png");
+  background-position: inherit;
+  background-size: cover;
+  background-repeat: no-repeat;
   }
 
 .grid__container__nosotros2  .grid__cuatro{
-    grid-row: 2/3;
-    grid-column: 2/3;
-    background-position: inherit;
-    background-size: cover;
-    background-repeat: no-repeat;
-    }
+  grid-row: 2/3;
+  grid-column: 2/3;
+  background-position: inherit;
+  background-size: cover;
+  background-repeat: no-repeat;
+  }
+
 .grid__container__nosotros2  .grid__cinco .p__link{
-      grid-row: 3/4;
-      grid-column: 1/3;
-      background-image: url("../recursos/caphai.png");
-      background-position: inherit;
-      background-size: cover;
-      background-repeat: no-repeat;
-      }
-
-
+  grid-row: 3/4;
+  grid-column: 1/3;
+  background-image: url("../recursos/caphai.png");
+  background-position: inherit;
+  background-size: cover;
+  background-repeat: no-repeat;
+  }
        
 .p__link{   
-      width: 25rem;
-      height: 7rem;
-      margin-left: 25rem ;
-      }
+  width: 25rem;
+  height: 7rem;
+  margin-left: 30rem ;
+  }
 
-
-.linkContactoTexto{
-        font-size: 1.5rem;
-        padding-bottom: 2rem;
-        margin-left: 1rem;
-        text-align: center;
-      }
+.linkContactoNosotros{
+  font-size: 1.5rem;
+  padding-bottom: 2rem;
+  margin-left: 3rem;
+  text-align: center;
+  }
       
-.btn{
-        background-color: white;
-        font-size: 2rem;
-        padding: 0.75rem;
-        border-radius: 1.5rem;
-        margin-left:40rem;
-         }
+.btn__nosotros{
+  background-color:white;
+  width: $ancho/2;
+  height:$alto/2 ;
+  color:black;
+  font-size: 2rem;
+  padding: 0.75rem;
+  border-radius:10rem;
+  margin-left:40rem;
+  margin-right: 15rem ;
+  margin-bottom: 3rem;
+    &:hover {  
+    transform: scale(1.20);
+    background-color:rgb(29, 41, 37);
+    padding:1rem ;
+    }
+  } 
       
-.btn:hover {  
-        transform: scale(1.25);
-        background-color:aquamarine;
-        }
-      
-.boton{
-        color: black;
-        }
+.btn__nosotros__texto{
+  color:black;
+    &:hover{
+    color:wheat
+    }
+  }
     
 @media (min-width:541px) and (max-width:720px){
+
+  .nosotrosTituloh2{
+    padding: 1rem;
+    }
+
+  .grid__texto1{
+    font-size:1.5rem ;
+    text-align: justify;
+    }   
+
   .grid__container__nosotros1{
     display:grid;
     grid-template-columns:50% 50%;
     grid-template-rows: 20rem 20rem 15rem;
-    gap: 0.25rem;
-    margin-left: 2rem;
-    margin-right: 2rem;
-    margin-top: 1rem;
+    gap: 1rem;
+    margin-left: 0.5rem;
+    margin-right: 0.5rem;
+    margin-top: 1rem;s
     .grid__texto{
       font-size:1.5rem;
       color: rgb(250, 243, 243);   
@@ -187,142 +210,146 @@
     }
 
   .grid__texto1{
-     font-size:1.5rem;
-     } 
+    font-size:1.5rem;
+    } 
+
   .grid__container__nosotros2{
-      display:grid;
-      grid-template-columns:50% 50%;
-      grid-template-rows: 25rem 35rem 10rem;
-      gap: 2rem;
-      justify-content: center;
-      align-content: center;
-      background-position: center;
-      padding-bottom: 0.10rem;
-      margin-left: 2rem;
-      margin-right: 2rem;
-        }
-  
-  }
-
+    display:grid;
+    grid-template-columns:50% 50%;
+    grid-template-rows: 25rem 35rem 10rem;
+    gap: 2rem;
+    padding-bottom: 0.10rem;
+    margin-left: 2rem;
+    margin-right: 2rem;
+    }
+ 
   .p__link{   
-        margin-left: 7rem ;
+    margin-left: 5rem ;
     }
 
- .linkContactoTexto{
-      font-size: 1.5rem;
-      margin-left: 1rem;
-      text-align: center;
+ .linkContactoNosotros{   
+    font-size: 1.5rem;
+    margin-left: 1rem;
+    text-align: center;
     }
 
+  .btn__nosotros{
+    margin-left:13rem ;
+    }
+
+  }
   
-@media (min-width:320px) and (max-width:540px){   
+@media (min-width:320px) and (max-width:540px){  
+  
+  .nosotrosTituloh2{
+    font-size: 1.25rem;
+    padding: 1rem;
+    }
 
   .grid__container__nosotros1{
     display:grid;
     grid-template-columns:50% 50%;
-    grid-template-rows: 20rem 20rem 20rem;
-    gap: 0.25rem;
+    grid-template-rows: 12rem 12rem 10rem;
+    gap: 1rem;
+    padding-top: 0.25rem;
     margin-left: 1rem;
     margin-right: 1rem;
-    margin-top: 1rem;
-       }
+    margin-top: 0.5rem;
+    margin-bottom: 0.5rem;
+    }
 
-    .grid__texto{
-      font-size: 1.5rem;
-     
-      }
+  .grid__texto{
+    font-size: 1rem;
+    }
 
-    .grid__texto1{
-      font-size:1.5rem;
-      }
-    
+  .grid__texto1{
+    font-size:1rem;
+    text-align: justify;
+    }
 
-    .grid__container__nosotros2{
-      display:grid;
-      grid-template-columns:100% ;
-      grid-template-rows: 25rem 20rem 25rem 20rem 5rem;
-      gap: 1rem;
-      justify-content: center;
-      align-content: center;
-      background-position: center;
-      padding-bottom: 0.10rem;
-      margin-left: 1rem;
-      margin-right: 1rem;
-        }
+  .nosotrosTituloh3{
+    font-size: 1.25rem;
+    }
+
+  .nosotrosTituloh4{
+    font-size: 1.25rem;
+    }
+
+  .nosotros__p{
+    font-size: 1rem;
+   }    
+
+  .grid__container__nosotros2{
+    display:grid;
+    grid-template-columns:100% ;
+    grid-template-rows: 18rem 20rem 16rem 20rem 5rem;
+    gap: 1rem;
+   padding-bottom: 0.10rem;
+    margin-left: 1rem;
+    margin-right: 1rem;
+    }
   
-    .grid__container__nosotros2.grid__uno{
-          grid-row: 1/2;
-          grid-column: 1/1;
-          background-position: inherit;
-          background-size: cover;
-          background-repeat: no-repeat;
-          } 
-    .grid__container__nosotros2  .grid__dos{
-            grid-row: 2/3;
-            grid-column: 1/1;
-            background-image: url("../recursos/nosotros_5.png");
-            background-position: inherit;
-            background-size: cover;
-            background-repeat: no-repeat;
-            }
-    .grid__container__nosotros2  .grid__cuatro{
-              grid-row: 3/4;
-              grid-column: 1/1;
-              background-position: inherit;
-              background-size: cover;
-              background-repeat: no-repeat;
-              }
-    .grid__container__nosotros2 .grid__tres{
-              grid-row: 4/5;
-              grid-column: 1/1;
-              background-image: url("../recursos/nosotros_6.png");
-              background-position: inherit;
-              background-size: cover;
-              background-repeat: no-repeat;
-              }
+  .grid__container__nosotros2.grid__uno{
+    grid-row: 1/2;
+    grid-column: 1/1;
+    background-position: inherit;
+    background-size: cover;
+    background-repeat: no-repeat;
+    } 
 
+  .grid__container__nosotros2  .grid__dos{
+    grid-row: 2/3;
+    grid-column: 1/1;
+    background-image: url("../recursos/nosotros_5.jpg");
+    background-position: inherit;
+    background-size: cover;
+    background-repeat: no-repeat;
+    }
 
-    .grid__container__nosotros2  .grid__cinco .p__link{
-      grid-row: 5/6;
-      grid-column: 1/1;
-      background-image: url("../recursos/caphai.png");
-      background-position: inherit;
-      background-size: cover;
-      background-repeat: no-repeat;
-      }
+  .grid__container__nosotros2  .grid__cuatro{
+    grid-row: 3/4;
+    grid-column: 1/1;
+    background-position: inherit;
+    background-size: cover;
+    background-repeat: no-repeat;
+    }
 
+  .grid__container__nosotros2 .grid__tres{
+    grid-row: 4/5;
+    grid-column: 1/1;
+    background-image: url("../recursos/nosotros_6.png");
+    background-position: inherit;
+    background-size: cover;
+    background-repeat: no-repeat;
+    }
 
+  .grid__container__nosotros2  .grid__cinco .p__link{
+    grid-row: 5/6;
+    grid-column: 1/1;
+    background-image: url("../recursos/caphai.png");
+    background-position: inherit;
+    background-size: cover;
+    background-repeat: no-repeat;
+    }
      
   .p__link{   
     width: 15rem;
     height: 5rem;
-    margin-left: 5rem ;
+    margin-left: 3.5rem ;
     }
 
-
-  .linkContactoTexto{
-      font-size: 1.5rem;
-      padding-bottom: 2rem;
-      margin-left: 1rem;
-      text-align: center;
+  .linkContactoNosotros{
+    font-size: 1rem;
+    padding-bottom: 2rem;
+    margin-top: 1rem;
+    margin-left: 0.75rem;
+    text-align: center;
     }
     
-   .btn{
-      background-color: white;
-      font-size: 2rem;
-      padding: 0.75rem;
-      border-radius: 1.5rem;
-      margin-left:8rem;
-       }
-    
-  .btn:hover {  
-      transform: scale(1.25);
-      background-color:aquamarine;
-      }
-    
-    .boton{
-      color: black;
-      }
+  .btn__nosotros{
+    margin-left:8rem ;
+    }
+      
   }
     
   
