--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -1,17 +1,18 @@
 $color-body:rgb(48, 68, 56);
-$color-tablet:rgba(99, 61, 36, 0.795);
-$color-celular:rgba(41, 29, 75, 0.795);
 $color-p: white;
 $color-h1:white;
 $color-h2:white;
-$color-btn:black;
+$color-h3:white;
+$color-h4:white;
+$color-btn:white;
 $font-family-body:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-$font-size-h1: 3rem;
-$font-size-navegador:0.2rem;
+$font-size-h1:3rem;
+$font-size-h2:2.5rem;
+$font-size-h3:2rem;
+$font-size-h4:1.75;
 $font-size-p:1.5rem;
-$font-size-link:2rem;
-$ancho:15rem;
-$alto:7.5rem;
+$ancho:20rem;
+$alto:10rem;
 $imagenescontactos:(
     key1:"url('../recursos/contacto/contacto__1.jpg')", 
     key2:"url('../recursos/contacto/contacto__2.jpg')",
