--- a/scss/_actitud.scss
+++ b/scss/_actitud.scss
@@ -76,6 +76,10 @@
       grid-row: 1/2;
       grid-column: 2/3;
      } 
+.imagen {
+  width: 40rem;
+  height: 25rem;
+ } 
      
      .linkContactoActitud {
       padding-bottom: 2rem;
@@ -175,12 +179,11 @@
    }
 
   .container__actitud3{
-    background-color: black;
     display: grid;
     grid-template-columns: 100%;
-    grid-template-rows: 25rem 20rem;
+    grid-template-rows: 25rem 23rem;
     gap: 1rem;
-    padding-top: 2rem;
+    padding-top: 1em;
     margin-left: 1rem;
     margin-right: 1rem; }
 
@@ -201,7 +204,11 @@
      grid-row: 1/2;
       grid-column: 1/1;
        }
-  
+       
+  .imagen {
+        width: 35rem;
+        height: 25rem;
+       } 
 
   .linkContactoActitud {
     font-size: 1.5rem;
@@ -256,9 +263,10 @@
     grid-template-columns: 100%;
     grid-template-rows: 14rem 14rem;
     gap: 1rem;
-    justify-content: center;
+    justify-content:center;
     align-content: center;
     background-position: center;
+    text-align: justify;
     padding-bottom: 0.10rem;
     margin-left: 1rem;
     margin-right: 1rem; }
@@ -301,7 +309,7 @@
   .container__actitud3{
     display: grid;
     grid-template-columns: 100%;
-    grid-template-rows: 25rem 25rem;
+    grid-template-rows: 15rem 20rem;
     gap: 1rem;
     padding-top: 2rem;
     padding-bottom: 0.10rem;
@@ -324,20 +332,26 @@
         grid-row: 2/3;
         grid-column: 1/1;
       }
+
+  .imagen {
+        width: 22rem;
+        height: 15rem;
+       }    
  
       .linkContactoActitud {
-    font-size: 1.5rem;
+    font-size: 1.25rem;
     text-align: center;
+    margin-top: 1rem;
         padding-bottom: 2rem;
         margin-left: 1rem;
           }  
       
   .btn__actitud{
         background-color:white;
-        width: $ancho/2;
-        height:$alto/2 ;
+        width: $ancho/2.5;
+        height:$alto/2.5 ;
         color:black;
-        font-size: 2rem;
+        font-size: 1.5rem;
         padding: 0.75rem;
         border-radius:10rem;
         margin-left:8rem;
