--- a/scss/_galeria.scss
+++ b/scss/_galeria.scss
@@ -191,10 +191,10 @@
   
   .btn__galeria{
     background-color:white;
-    width: $ancho/2;
-    height:$alto/2 ;
+    width: $ancho/2.5;
+    height:$alto/2.5 ;
     color:black;
-    font-size: 2rem;
+    font-size: 1.5rem;
     padding: 0.75rem;
     border-radius:10rem;
     margin-left:8rem;
@@ -210,7 +210,7 @@
   .btn__galeria__texto{
     color:black;
     &:hover{
-    color:wheat
+    color:white
       }
     }
   
