--- a/scss/_nosotros.scss
+++ b/scss/_nosotros.scss
@@ -209,7 +209,7 @@
       }  
     }
 
-  .grid__texto1{
+  .texto1{
     font-size:1.5rem;
     } 
 
@@ -258,11 +258,11 @@
     margin-bottom: 0.5rem;
     }
 
-  .grid__texto{
+  .texto{
     font-size: 1rem;
     }
 
-  .grid__texto1{
+  .texto1{
     font-size:1rem;
     text-align: justify;
     }
@@ -346,10 +346,30 @@
     text-align: center;
     }
     
-  .btn__nosotros{
-    margin-left:8rem ;
-    }
-      
+    .btn__nosotros{
+      background-color: white;
+      width: $ancho/2.5;
+      height:$alto/2.5 ;
+      color:black;
+      font-size: 1.5rem;
+      padding: 0.75rem;
+      border-radius:10rem;
+      margin-left:8rem;
+      margin-right: 15rem ;
+      margin-bottom: 3rem;
+        &:hover {  
+        transform: scale(1.20);
+        background-color:rgb(29, 41, 37);
+        padding:1rem ;
+         }
+        } 
+    
+    .btn__nosotros__texto{
+      color:black;
+        &:hover{
+        color:wheat
+        }
+       }
   }
     
   
